[project]
name = "heritage-ai-server"
version = "0.1.0"
description = "Production-oriented MVP for an evidence-based Korean national heritage AI docent chatbot."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "httpx>=0.27",
  "openai>=1.0",
  "pytest>=8.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "black>=24.0"]

[tool.pytest.ini_options]
testpaths = ["ai-server/app/tests"]
pythonpath = ["ai-server"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
